utils/y.output
State 70 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: preamble function

    2 preamble: print read

    3 print: EXTERN VOID PRINT '(' INT ')' ';'

    4 read: EXTERN INT READ '(' no_args ')' ';'

    5 function: INT function_name argument code_block

    6 function_name: IDENTIFIER

    7 argument: '(' argument ')'
    8         | '(' argument_body ')'

    9 argument_body: INT IDENTIFIER
   10              | no_args

   11 code_block: '{' code_block '}'
   12           | '{' code_block_body '}'

   13 code_block_body: variable_decs stmts_and_exprs

   14 variable_decs: variable_dec variable_decs
   15              | ε

   16 variable_dec: INT IDENTIFIER ';'

   17 stmts_and_exprs: stmt_or_expr stmts_and_exprs
   18                | ε

   19 stmt_or_expr: stmt
   20             | expr

   21 stmt: assignment_stmt ';'
   22     | while_stmt
   23     | if_stmt
   24     | return_stmt ';'

   25 while_stmt: WHILE condition code_block
   26           | WHILE condition stmt_or_expr

   27 if_stmt: IF condition code_block else_part
   28        | IF condition stmt_or_expr else_part

   29 else_part: ELSE code_block
   30          | ELSE stmt_or_expr
   31          | ε

   32 return_stmt: RETURN return

   33 return: '(' return ')'
   34       | return_body

   35 return_body: arithmetic_expr
   36            | relational_expr
   37            | expr_arg

   38 condition: '(' condition ')'
   39          | '(' condition_body ')'

   40 condition_body: relational_expr
   41               | arithmetic_expr
   42               | expr_arg

   43 expr: assignment_expr
   44     | read_expr ';'
   45     | print_expr ';'

   46 assignment_stmt: IDENTIFIER EQUALS assignment_expr

   47 assignment_expr: arithmetic_expr
   48                | relational_expr
   49                | expr_arg

   50 arithmetic_expr: plus_expr
   51                | minus_expr
   52                | times_expr
   53                | divide_expr

   54 plus_expr: expr_arg PLUS expr_arg

   55 minus_expr: expr_arg MINUS expr_arg

   56 times_expr: expr_arg TIMES expr_arg

   57 divide_expr: expr_arg DIVIDE expr_arg

   58 relational_expr: lt_expr
   59                | gt_expr
   60                | leq_expr
   61                | geq_expr
   62                | eq_expr

   63 lt_expr: expr_arg LT expr_arg

   64 gt_expr: expr_arg GT expr_arg

   65 leq_expr: expr_arg LEQ expr_arg

   66 geq_expr: expr_arg GEQ expr_arg

   67 eq_expr: expr_arg EQ expr_arg

   68 expr_arg: read_expr
   69         | IDENTIFIER
   70         | NUMBER
   71         | MINUS NUMBER
   72         | MINUS IDENTIFIER

   73 read_expr: READ read_arg

   74 read_arg: '(' read_arg ')'
   75         | '(' ')'

   76 print_expr: PRINT print_arg

   77 print_arg: '(' print_arg ')'
   78          | '(' assignment_expr ')'

   79 no_args: VOID
   80        | ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 4 7 8 33 38 39 74 75 77 78
    ')' (41) 3 4 7 8 33 38 39 74 75 77 78
    ';' (59) 3 4 16 21 24 44 45
    '{' (123) 11 12
    '}' (125) 11 12
    error (256)
    NUMBER <ival> (258) 70 71
    IDENTIFIER <sval> (259) 6 9 16 46 69 72
    INT (260) 3 4 5 9 16
    VOID (261) 3 79
    EXTERN (262) 3 4
    PRINT (263) 3 76
    READ (264) 4 73
    IF (265) 27 28
    ELSE (266) 29 30
    WHILE (267) 25 26
    RETURN (268) 32
    PLUS (269) 54
    MINUS (270) 55 71 72
    TIMES (271) 56
    DIVIDE (272) 57
    EQUALS (273) 46
    LT (274) 63
    GT (275) 64
    LEQ (276) 65
    GEQ (277) 66
    EQ (278) 67
    NOELSE (279)


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    program <nval> (31)
        on left: 1
        on right: 0
    preamble <vval> (32)
        on left: 2
        on right: 1
    print <nval> (33)
        on left: 3
        on right: 2
    read <nval> (34)
        on left: 4
        on right: 2
    function <nval> (35)
        on left: 5
        on right: 1
    function_name <sval> (36)
        on left: 6
        on right: 5
    argument <nval> (37)
        on left: 7 8
        on right: 5 7
    argument_body <nval> (38)
        on left: 9 10
        on right: 8
    code_block <nval> (39)
        on left: 11 12
        on right: 5 11 25 27 29
    code_block_body <vval> (40)
        on left: 13
        on right: 12
    variable_decs <vval> (41)
        on left: 14 15
        on right: 13 14
    variable_dec <nval> (42)
        on left: 16
        on right: 14
    stmts_and_exprs <vval> (43)
        on left: 17 18
        on right: 13 17
    stmt_or_expr <nval> (44)
        on left: 19 20
        on right: 17 26 28 30
    stmt <nval> (45)
        on left: 21 22 23 24
        on right: 19
    while_stmt <nval> (46)
        on left: 25 26
        on right: 22
    if_stmt <nval> (47)
        on left: 27 28
        on right: 23
    else_part <nval> (48)
        on left: 29 30 31
        on right: 27 28
    return_stmt <nval> (49)
        on left: 32
        on right: 24
    return <nval> (50)
        on left: 33 34
        on right: 32 33
    return_body <nval> (51)
        on left: 35 36 37
        on right: 34
    condition <nval> (52)
        on left: 38 39
        on right: 25 26 27 28 38
    condition_body <nval> (53)
        on left: 40 41 42
        on right: 39
    expr <nval> (54)
        on left: 43 44 45
        on right: 20
    assignment_stmt <nval> (55)
        on left: 46
        on right: 21
    assignment_expr <nval> (56)
        on left: 47 48 49
        on right: 43 46 78
    arithmetic_expr <nval> (57)
        on left: 50 51 52 53
        on right: 35 41 47
    plus_expr <nval> (58)
        on left: 54
        on right: 50
    minus_expr <nval> (59)
        on left: 55
        on right: 51
    times_expr <nval> (60)
        on left: 56
        on right: 52
    divide_expr <nval> (61)
        on left: 57
        on right: 53
    relational_expr <nval> (62)
        on left: 58 59 60 61 62
        on right: 36 40 48
    lt_expr <nval> (63)
        on left: 63
        on right: 58
    gt_expr <nval> (64)
        on left: 64
        on right: 59
    leq_expr <nval> (65)
        on left: 65
        on right: 60
    geq_expr <nval> (66)
        on left: 66
        on right: 61
    eq_expr <nval> (67)
        on left: 67
        on right: 62
    expr_arg <nval> (68)
        on left: 68 69 70 71 72
        on right: 37 42 49 54 55 56 57 63 64 65 66 67
    read_expr <nval> (69)
        on left: 73
        on right: 44 68
    read_arg <nval> (70)
        on left: 74 75
        on right: 73 74
    print_expr <nval> (71)
        on left: 76
        on right: 45
    print_arg <nval> (72)
        on left: 77 78
        on right: 76 77
    no_args <nval> (73)
        on left: 79 80
        on right: 4 10


State 0

    0 $accept: • program $end

    EXTERN  shift, and go to state 1

    program   go to state 2
    preamble  go to state 3
    print     go to state 4


State 1

    3 print: EXTERN • VOID PRINT '(' INT ')' ';'

    VOID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: preamble • function

    INT  shift, and go to state 7

    function  go to state 8


State 4

    2 preamble: print • read

    EXTERN  shift, and go to state 9

    read  go to state 10


State 5

    3 print: EXTERN VOID • PRINT '(' INT ')' ';'

    PRINT  shift, and go to state 11


State 6

    0 $accept: program $end •

    $default  accept


State 7

    5 function: INT • function_name argument code_block

    IDENTIFIER  shift, and go to state 12

    function_name  go to state 13


State 8

    1 program: preamble function •

    $default  reduce using rule 1 (program)


State 9

    4 read: EXTERN • INT READ '(' no_args ')' ';'

    INT  shift, and go to state 14


State 10

    2 preamble: print read •

    $default  reduce using rule 2 (preamble)


State 11

    3 print: EXTERN VOID PRINT • '(' INT ')' ';'

    '('  shift, and go to state 15


State 12

    6 function_name: IDENTIFIER •

    $default  reduce using rule 6 (function_name)


State 13

    5 function: INT function_name • argument code_block

    '('  shift, and go to state 16

    argument  go to state 17


State 14

    4 read: EXTERN INT • READ '(' no_args ')' ';'

    READ  shift, and go to state 18


State 15

    3 print: EXTERN VOID PRINT '(' • INT ')' ';'

    INT  shift, and go to state 19


State 16

    7 argument: '(' • argument ')'
    8         | '(' • argument_body ')'

    INT   shift, and go to state 20
    VOID  shift, and go to state 21
    '('   shift, and go to state 16

    $default  reduce using rule 80 (no_args)

    argument       go to state 22
    argument_body  go to state 23
    no_args        go to state 24


State 17

    5 function: INT function_name argument • code_block

    '{'  shift, and go to state 25

    code_block  go to state 26


State 18

    4 read: EXTERN INT READ • '(' no_args ')' ';'

    '('  shift, and go to state 27


State 19

    3 print: EXTERN VOID PRINT '(' INT • ')' ';'

    ')'  shift, and go to state 28


State 20

    9 argument_body: INT • IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 21

   79 no_args: VOID •

    $default  reduce using rule 79 (no_args)


State 22

    7 argument: '(' argument • ')'

    ')'  shift, and go to state 30


State 23

    8 argument: '(' argument_body • ')'

    ')'  shift, and go to state 31


State 24

   10 argument_body: no_args •

    $default  reduce using rule 10 (argument_body)


State 25

   11 code_block: '{' • code_block '}'
   12           | '{' • code_block_body '}'

    INT  shift, and go to state 32
    '{'  shift, and go to state 25

    $default  reduce using rule 15 (variable_decs)

    code_block       go to state 33
    code_block_body  go to state 34
    variable_decs    go to state 35
    variable_dec     go to state 36


State 26

    5 function: INT function_name argument code_block •

    $default  reduce using rule 5 (function)


State 27

    4 read: EXTERN INT READ '(' • no_args ')' ';'

    VOID  shift, and go to state 21

    $default  reduce using rule 80 (no_args)

    no_args  go to state 37


State 28

    3 print: EXTERN VOID PRINT '(' INT ')' • ';'

    ';'  shift, and go to state 38


State 29

    9 argument_body: INT IDENTIFIER •

    $default  reduce using rule 9 (argument_body)


State 30

    7 argument: '(' argument ')' •

    $default  reduce using rule 7 (argument)


State 31

    8 argument: '(' argument_body ')' •

    $default  reduce using rule 8 (argument)


State 32

   16 variable_dec: INT • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 39


State 33

   11 code_block: '{' code_block • '}'

    '}'  shift, and go to state 40


State 34

   12 code_block: '{' code_block_body • '}'

    '}'  shift, and go to state 41


State 35

   13 code_block_body: variable_decs • stmts_and_exprs

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    PRINT       shift, and go to state 44
    READ        shift, and go to state 45
    IF          shift, and go to state 46
    WHILE       shift, and go to state 47
    RETURN      shift, and go to state 48
    MINUS       shift, and go to state 49

    $default  reduce using rule 18 (stmts_and_exprs)

    stmts_and_exprs  go to state 50
    stmt_or_expr     go to state 51
    stmt             go to state 52
    while_stmt       go to state 53
    if_stmt          go to state 54
    return_stmt      go to state 55
    expr             go to state 56
    assignment_stmt  go to state 57
    assignment_expr  go to state 58
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 71
    print_expr       go to state 72


State 36

   14 variable_decs: variable_dec • variable_decs

    INT  shift, and go to state 32

    $default  reduce using rule 15 (variable_decs)

    variable_decs  go to state 73
    variable_dec   go to state 36


State 37

    4 read: EXTERN INT READ '(' no_args • ')' ';'

    ')'  shift, and go to state 74


State 38

    3 print: EXTERN VOID PRINT '(' INT ')' ';' •

    $default  reduce using rule 3 (print)


State 39

   16 variable_dec: INT IDENTIFIER • ';'

    ';'  shift, and go to state 75


State 40

   11 code_block: '{' code_block '}' •

    $default  reduce using rule 11 (code_block)


State 41

   12 code_block: '{' code_block_body '}' •

    $default  reduce using rule 12 (code_block)


State 42

   70 expr_arg: NUMBER •

    $default  reduce using rule 70 (expr_arg)


State 43

   46 assignment_stmt: IDENTIFIER • EQUALS assignment_expr
   69 expr_arg: IDENTIFIER •

    EQUALS  shift, and go to state 76

    $default  reduce using rule 69 (expr_arg)


State 44

   76 print_expr: PRINT • print_arg

    '('  shift, and go to state 77

    print_arg  go to state 78


State 45

   73 read_expr: READ • read_arg

    '('  shift, and go to state 79

    read_arg  go to state 80


State 46

   27 if_stmt: IF • condition code_block else_part
   28        | IF • condition stmt_or_expr else_part

    '('  shift, and go to state 81

    condition  go to state 82


State 47

   25 while_stmt: WHILE • condition code_block
   26           | WHILE • condition stmt_or_expr

    '('  shift, and go to state 81

    condition  go to state 83


State 48

   32 return_stmt: RETURN • return

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 84
    READ        shift, and go to state 45
    MINUS       shift, and go to state 49
    '('         shift, and go to state 85

    return           go to state 86
    return_body      go to state 87
    arithmetic_expr  go to state 88
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 89
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 90
    read_expr        go to state 91


State 49

   71 expr_arg: MINUS • NUMBER
   72         | MINUS • IDENTIFIER

    NUMBER      shift, and go to state 92
    IDENTIFIER  shift, and go to state 93


State 50

   13 code_block_body: variable_decs stmts_and_exprs •

    $default  reduce using rule 13 (code_block_body)


State 51

   17 stmts_and_exprs: stmt_or_expr • stmts_and_exprs

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    PRINT       shift, and go to state 44
    READ        shift, and go to state 45
    IF          shift, and go to state 46
    WHILE       shift, and go to state 47
    RETURN      shift, and go to state 48
    MINUS       shift, and go to state 49

    $default  reduce using rule 18 (stmts_and_exprs)

    stmts_and_exprs  go to state 94
    stmt_or_expr     go to state 51
    stmt             go to state 52
    while_stmt       go to state 53
    if_stmt          go to state 54
    return_stmt      go to state 55
    expr             go to state 56
    assignment_stmt  go to state 57
    assignment_expr  go to state 58
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 71
    print_expr       go to state 72


State 52

   19 stmt_or_expr: stmt •

    $default  reduce using rule 19 (stmt_or_expr)


State 53

   22 stmt: while_stmt •

    $default  reduce using rule 22 (stmt)


State 54

   23 stmt: if_stmt •

    $default  reduce using rule 23 (stmt)


State 55

   24 stmt: return_stmt • ';'

    ';'  shift, and go to state 95


State 56

   20 stmt_or_expr: expr •

    $default  reduce using rule 20 (stmt_or_expr)


State 57

   21 stmt: assignment_stmt • ';'

    ';'  shift, and go to state 96


State 58

   43 expr: assignment_expr •

    $default  reduce using rule 43 (expr)


State 59

   47 assignment_expr: arithmetic_expr •

    $default  reduce using rule 47 (assignment_expr)


State 60

   50 arithmetic_expr: plus_expr •

    $default  reduce using rule 50 (arithmetic_expr)


State 61

   51 arithmetic_expr: minus_expr •

    $default  reduce using rule 51 (arithmetic_expr)


State 62

   52 arithmetic_expr: times_expr •

    $default  reduce using rule 52 (arithmetic_expr)


State 63

   53 arithmetic_expr: divide_expr •

    $default  reduce using rule 53 (arithmetic_expr)


State 64

   48 assignment_expr: relational_expr •

    $default  reduce using rule 48 (assignment_expr)


State 65

   58 relational_expr: lt_expr •

    $default  reduce using rule 58 (relational_expr)


State 66

   59 relational_expr: gt_expr •

    $default  reduce using rule 59 (relational_expr)


State 67

   60 relational_expr: leq_expr •

    $default  reduce using rule 60 (relational_expr)


State 68

   61 relational_expr: geq_expr •

    $default  reduce using rule 61 (relational_expr)


State 69

   62 relational_expr: eq_expr •

    $default  reduce using rule 62 (relational_expr)


State 70

   49 assignment_expr: expr_arg •
   54 plus_expr: expr_arg • PLUS expr_arg
   55 minus_expr: expr_arg • MINUS expr_arg
   56 times_expr: expr_arg • TIMES expr_arg
   57 divide_expr: expr_arg • DIVIDE expr_arg
   63 lt_expr: expr_arg • LT expr_arg
   64 gt_expr: expr_arg • GT expr_arg
   65 leq_expr: expr_arg • LEQ expr_arg
   66 geq_expr: expr_arg • GEQ expr_arg
   67 eq_expr: expr_arg • EQ expr_arg

    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    TIMES   shift, and go to state 99
    DIVIDE  shift, and go to state 100
    LT      shift, and go to state 101
    GT      shift, and go to state 102
    LEQ     shift, and go to state 103
    GEQ     shift, and go to state 104
    EQ      shift, and go to state 105

    MINUS     [reduce using rule 49 (assignment_expr)]
    $default  reduce using rule 49 (assignment_expr)


State 71

   44 expr: read_expr • ';'
   68 expr_arg: read_expr •

    ';'  shift, and go to state 106

    $default  reduce using rule 68 (expr_arg)


State 72

   45 expr: print_expr • ';'

    ';'  shift, and go to state 107


State 73

   14 variable_decs: variable_dec variable_decs •

    $default  reduce using rule 14 (variable_decs)


State 74

    4 read: EXTERN INT READ '(' no_args ')' • ';'

    ';'  shift, and go to state 108


State 75

   16 variable_dec: INT IDENTIFIER ';' •

    $default  reduce using rule 16 (variable_dec)


State 76

   46 assignment_stmt: IDENTIFIER EQUALS • assignment_expr

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 84
    READ        shift, and go to state 45
    MINUS       shift, and go to state 49

    assignment_expr  go to state 109
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 91


State 77

   77 print_arg: '(' • print_arg ')'
   78          | '(' • assignment_expr ')'

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 84
    READ        shift, and go to state 45
    MINUS       shift, and go to state 49
    '('         shift, and go to state 77

    assignment_expr  go to state 110
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 91
    print_arg        go to state 111


State 78

   76 print_expr: PRINT print_arg •

    $default  reduce using rule 76 (print_expr)


State 79

   74 read_arg: '(' • read_arg ')'
   75         | '(' • ')'

    '('  shift, and go to state 79
    ')'  shift, and go to state 112

    read_arg  go to state 113


State 80

   73 read_expr: READ read_arg •

    $default  reduce using rule 73 (read_expr)


State 81

   38 condition: '(' • condition ')'
   39          | '(' • condition_body ')'

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 84
    READ        shift, and go to state 45
    MINUS       shift, and go to state 49
    '('         shift, and go to state 81

    condition        go to state 114
    condition_body   go to state 115
    arithmetic_expr  go to state 116
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 117
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 118
    read_expr        go to state 91


State 82

   27 if_stmt: IF condition • code_block else_part
   28        | IF condition • stmt_or_expr else_part

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    PRINT       shift, and go to state 44
    READ        shift, and go to state 45
    IF          shift, and go to state 46
    WHILE       shift, and go to state 47
    RETURN      shift, and go to state 48
    MINUS       shift, and go to state 49
    '{'         shift, and go to state 25

    code_block       go to state 119
    stmt_or_expr     go to state 120
    stmt             go to state 52
    while_stmt       go to state 53
    if_stmt          go to state 54
    return_stmt      go to state 55
    expr             go to state 56
    assignment_stmt  go to state 57
    assignment_expr  go to state 58
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 71
    print_expr       go to state 72


State 83

   25 while_stmt: WHILE condition • code_block
   26           | WHILE condition • stmt_or_expr

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 43
    PRINT       shift, and go to state 44
    READ        shift, and go to state 45
    IF          shift, and go to state 46
    WHILE       shift, and go to state 47
    RETURN      shift, and go to state 48
    MINUS       shift, and go to state 49
    '{'         shift, and go to state 25

    code_block       go to state 121
    stmt_or_expr     go to state 122
    stmt             go to state 52
    while_stmt       go to state 53
    if_stmt          go to state 54
    return_stmt      go to state 55
    expr             go to state 56
    assignment_stmt  go to state 57
    assignment_expr  go to state 58
    arithmetic_expr  go to state 59
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 64
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 70
    read_expr        go to state 71
    print_expr       go to state 72


State 84

   69 expr_arg: IDENTIFIER •

    $default  reduce using rule 69 (expr_arg)


State 85

   33 return: '(' • return ')'

    NUMBER      shift, and go to state 42
    IDENTIFIER  shift, and go to state 84
    READ        shift, and go to state 45
    MINUS       shift, and go to state 49
    '('         shift, and go to state 85

    return           go to state 123
    return_body      go to state 87
    arithmetic_expr  go to state 88
    plus_expr        go to state 60
    minus_expr       go to state 61
    times_expr       go to state 62
    divide_expr      go to state 63
    relational_expr  go to state 89
    lt_expr          go to state 65
    gt_expr          go to state 66
    leq_expr         go to state 67
    geq_expr         go to state 68
    eq_expr          go to state 69
    expr_arg         go to state 90
    read_expr        go to state 91


State 86

   32 return_stmt: RETURN return •

    $default  reduce using rule 32 (return_stmt)


State 87

   34 return: return_body •

    $default  reduce using rule 34 (return)


State 88

   35 return_body: arithmetic_expr •

    $default  reduce using rule 35 (return_body)


State 89

   36 return_body: relational_expr •

    $default  reduce using rule 36 (return_body)


State 90

   37 return_body: expr_arg •
   54 plus_expr: expr_arg • PLUS expr_arg
   55 minus_expr: expr_arg • MINUS expr_arg
   56 times_expr: expr_arg • TIMES expr_arg
   57 divide_expr: expr_arg • DIVIDE expr_arg
   63 lt_expr: expr_arg • LT expr_arg
   64 gt_expr: expr_arg • GT expr_arg
   65 leq_expr: expr_arg • LEQ expr_arg
   66 geq_expr: expr_arg • GEQ expr_arg
   67 eq_expr: expr_arg • EQ expr_arg

    PLUS    shift, and go to state 97
    MINUS   shift, and go to state 98
    TIMES   shift, and go to state 99
    DIVIDE  shift, and go to state 100
    LT      shift, and go to state 101
    GT      shift, and go to state 102
    LEQ     shift, and go to state 103
    GEQ     shift, and go to state 104
    EQ      shift, and go to state 105

    $default  reduce using rule 37 (return_body)


State 91

   68 expr_arg: read_expr •

    $default  reduce using rule 68 (expr_arg)


State 92

   71 expr_arg: MINUS NUMBER •
